Modified some wordings

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <section id="my-dream">
             <div class="container-fluid">
                 <h2> Travelling around the world is always my dream </h2>
-                <h3>I have visited Europe, Australia, South East Asia and Mainland China.</h3>
+                <h3>I've visited Europe, Australia, South East Asia and Mainland China. Below are my awesome moments.</h3>
 
                 <div class="text-center">
                     <ul class="pagination pagination-sm" >
